clear input field after adding

--- a/Local Storage CRUD App/index.html
+++ b/Local Storage CRUD App/index.html
@@ -15,22 +15,22 @@
     <form id="form" class="w-full h-52 grid grid-cols-2 gap-2">
         <div class="flex flex-col pr-4">
             <label class="text-white">Name</label>
-            <input id="name" placeholder="Enter Name" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+            <input id="name" placeholder="Enter Name" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text" required>
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Age</label>
-            <input id="age" placeholder="Enter Age" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="number">
+            <input id="age" placeholder="Enter Age" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="number" required>
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Address</label>
-            <input id="address" placeholder="Enter Address" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text">
+            <input id="address" placeholder="Enter Address" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="text" required>
         </div>
 
         <div class="flex flex-col pr-4">
             <label class="text-white">Email</label>
-            <input id="email" placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email">
+            <input id="email" placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email" required>
         </div>
 
         <button id="add" class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold">
