--- a/Local Storage CRUD App/index.html
+++ b/Local Storage CRUD App/index.html
@@ -55,7 +55,7 @@
         </table>
     </div>
 
-    <div id="modal-element" class="fixed z-10 inset-0 overflow-y-auto hidden">
+    <div id="modal-element" class="fixed z-10 inset-0 overflow-y-auto hidden mt-32">
         <div class="flex items-center justify-center min-h-screen px-4 pt-4 pb-20 text-center sm:block sm:p-0">
 <!--            <div class="fixed inset-0 transition-opacity">-->
 <!--                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>-->
@@ -84,7 +84,7 @@
                 <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
                     <span class="mt-3 flex w-full rounded-md shadow-sm sm:mt-0 sm:w-auto">
                     <button id="close-modal" type="button"
-                            class="inline-flex justify-center w-full rounded-md border border-gray-300 px-4 py-2 bg-white text-base leading-6 font-medium text-gray-700 shadow-sm hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5">
+                            class="bg-red-500 inline-flex justify-center w-full rounded-md border border-gray-300 px-4 py-2 bg-red-500 text-base leading-6 font-medium text-gray-100 shadow-sm hover:text-gray-500 focus:outline-none focus:border-blue-300 focus:shadow-outline-blue transition ease-in-out duration-150 sm:text-sm sm:leading-5">
                         Close
                     </button>
                 </span>
