--- a/Local Storage CRUD App/index.html
+++ b/Local Storage CRUD App/index.html
@@ -33,7 +33,7 @@
             <input id="email" placeholder="Enter Email" class="border-2 border-gray-300 rounded-md bg-gray-200 h-10 pl-1" type="email" required>
         </div>
 
-        <button id="add" class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold">
+        <button id="add" class="col-span-2 bg-black text-white p-2 mr-4 rounded-md text-xl font-semibold" type="submit">
             ADD
         </button>
     </form>
