initial UI draft

--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
-<body>
+<body class="bg-gray-950 w-full h-screen flex flex-col">
+    <div class="w-full flex flex-row h-10">
+        <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center">Personal Details</div>
+        <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center">Contact Info</div>
+        <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center">Address</div>
+        <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center">Username & Password</div>
+    </div>
+
+    <div class="w-full flex-1">
+        <div class="bg-gray-500 w-full h-full text-white">
+
+        </div>
+    </div>
+
 
 </body>
 </html>
