--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -16,8 +16,46 @@
     </div>
 
     <div class="w-full flex-1">
-        <div class="bg-gray-500 w-full h-full text-white">
+        //name
+        <div class="bg-gray-500 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+                Register:
+            </div>
 
+
+            <div class="h-60 flex flex-col px-8 gap-10 mt-6">
+<!--                <label>Login Info:</label>-->
+                <input type="text" placeholder="First Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input type="text" placeholder="Last Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input type="date" placeholder="Date of Birth" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+            </div>
+
+            <div class="flex-1 w-3/4 flex justify-end items-start pr-4">
+                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
+                    Next
+                </button>
+            </div>
+        </div>
+
+        /*contact*/
+        <div class="bg-gray-500 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+                Register:
+            </div>
+
+
+            <div class="h-60 flex flex-col px-8 gap-10 mt-6">
+                <!--                <label>Login Info:</label>-->
+                <input type="text" placeholder="First Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input type="text" placeholder="Last Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input type="date" placeholder="Date of Birth" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+            </div>
+
+            <div class="flex-1 w-3/4 flex justify-end items-start pr-4">
+                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
+                    Next
+                </button>
+            </div>
         </div>
     </div>
 
