--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -15,10 +15,9 @@
         <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center">Username & Password</div>
     </div>
 
-    <div class="w-full flex-1 hidden">
-        //name
-        <div class="bg-gray-500 w-full h-full text-white flex flex-col pl-70">
-            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+    <div class="w-full flex-1">
+        <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
             </div>
 
@@ -31,7 +30,7 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4">
-                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
+                <button class="bg-gray-700 px-4 py-2 font-bold font-mono hover:bg-gray-900 hover:text-white rounded-md">
                     Next
                 </button>
             </div>
@@ -40,8 +39,8 @@
     </div>
 
     <div class="w-full flex-1 hidden">
-        <div class="bg-blue-500 w-full h-full text-white flex flex-col pl-70">
-            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+        <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
             </div>
 
@@ -57,7 +56,7 @@
                     Previous
                 </button>
 
-                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
+                <button class="bg-blue-500 px-4 py-2 font-bold font-mono">
                     Next
                 </button>
             </div>
@@ -65,8 +64,8 @@
     </div>
 
     <div class="w-full flex-1 hidden">
-        <div class="bg-green-500 w-full h-full text-white flex flex-col pl-70">
-            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+        <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
             </div>
 
@@ -81,24 +80,24 @@
                     Previous
                 </button>
 
-                <button class="bg-green-950 px-4 py-2 font-bold font-mono">
+                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
                     Next
                 </button>
             </div>
         </div>
     </div>
 
-    <div class="w-full flex-1">
-        <div class="bg-yellow-500 w-full h-full text-white flex flex-col pl-70">
-            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl">
+    <div class="w-full flex-1 hidden">
+        <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
+            <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
             </div>
 
 
             <div class="h-32 flex flex-col px-8 gap-7 mt-6">
                 <!--                <label>Login Info:</label>-->
-                <input type="text" placeholder="Username" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
-                <input type="password" placeholder="Password" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input type="text" placeholder="Username" class="w-3/4 border-1 h-10 bg-white text-black rounded-md">
+                <input type="password" placeholder="Password" class="w-3/4 border-1 h-10 bg-white text-black rounded-md">
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
@@ -106,8 +105,8 @@
                     Previous
                 </button>
 
-                <button class="bg-green-950 px-4 py-2 font-bold font-mono">
-                    Next
+                <button class="bg-yellow-500 px-4 py-2 font-bold font-mono">
+                    Submit
                 </button>
             </div>
         </div>
