create a js function to update form

--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-950 w-full h-screen flex flex-col">
     <div class="w-full flex flex-row h-10">
-        <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center">Personal Details</div>
-        <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center">Contact Info</div>
-        <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center">Address</div>
-        <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center">Username & Password</div>
+        <div id="top-content" class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center">Personal Details</div>
+        <div id="top-content" class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center">Contact Info</div>
+        <div id="top-content" class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center">Address</div>
+        <div id="top-content" class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center">Username & Password</div>
     </div>
 
-    <div class="w-full flex-1">
+    <div id="step-content" class="w-full flex-1">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -38,7 +38,7 @@
 
     </div>
 
-    <div class="w-full flex-1 hidden">
+    <div id="step-content" class="w-full flex-1 hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <div class="w-full flex-1 hidden">
+    <div id="step-content" class="w-full flex-1 hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="w-full flex-1 hidden">
+    <div id="step-content" class="w-full flex-1 hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
