--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -24,13 +24,13 @@
 
             <div class="h-60 flex flex-col px-8 gap-10 mt-6">
 <!--                <label>Login Info:</label>-->
-                <input type="text" placeholder="First Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
-                <input type="text" placeholder="Last Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
-                <input type="date" placeholder="Date of Birth" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input id="firstname" type="text" placeholder="First Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input id="lastname" type="text" placeholder="Last Name" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
+                <input id="dateofbirth" type="date" placeholder="Date of Birth" class="w-3/4 border-2 h-10 bg-white text-black rounded-md">
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4">
-                <button class="bg-gray-700 px-4 py-2 font-bold font-mono hover:bg-gray-900 hover:text-white rounded-md">
+                <button id="next-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono hover:bg-gray-900 hover:text-white rounded-md">
                     Next
                 </button>
             </div>
@@ -52,11 +52,11 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
                     Previous
                 </button>
 
-                <button class="bg-blue-500 px-4 py-2 font-bold font-mono">
+                <button id="next-btn" class="bg-blue-500 px-4 py-2 font-bold font-mono">
                     Next
                 </button>
             </div>
@@ -76,11 +76,11 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
                     Previous
                 </button>
 
-                <button class="bg-green-500 px-4 py-2 font-bold font-mono">
+                <button id="next-btn" class="bg-green-500 px-4 py-2 font-bold font-mono">
                     Next
                 </button>
             </div>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
                     Previous
                 </button>
 
