--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -9,13 +9,13 @@
 </head>
 <body class="bg-gray-950 w-full h-screen flex flex-col">
     <div class="w-full flex flex-row h-10">
-        <div id="top-content" class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center">Personal Details</div>
-        <div id="top-content" class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center">Contact Info</div>
-        <div id="top-content" class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center">Address</div>
-        <div id="top-content" class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center">Username & Password</div>
+        <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center top-content">Personal Details</div>
+        <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center top-content">Contact Info</div>
+        <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center top-content">Address</div>
+        <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center top-content">Username & Password</div>
     </div>
 
-    <div id="step-content" class="w-full flex-1">
+    <div class="w-full flex-1 step-content">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -30,7 +30,7 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4">
-                <button id="next-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono hover:bg-gray-900 hover:text-white rounded-md">
+                <button class="bg-gray-700 px-4 py-2 font-bold font-mono hover:bg-gray-900 hover:text-white rounded-md next-btn">
                     Next
                 </button>
             </div>
@@ -38,7 +38,7 @@
 
     </div>
 
-    <div id="step-content" class="w-full flex-1 hidden">
+    <div class="w-full flex-1 hidden step-content">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -52,18 +52,18 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button class="bg-gray-700 px-4 py-2 font-bold font-mono previous-btn">
                     Previous
                 </button>
 
-                <button id="next-btn" class="bg-blue-500 px-4 py-2 font-bold font-mono">
+                <button class="bg-blue-500 px-4 py-2 font-bold font-mono next-btn">
                     Next
                 </button>
             </div>
         </div>
     </div>
 
-    <div id="step-content" class="w-full flex-1 hidden">
+    <div class="w-full flex-1 hidden step-content">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -76,18 +76,18 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button class="bg-gray-700 px-4 py-2 font-bold font-mono previous-btn">
                     Previous
                 </button>
 
-                <button id="next-btn" class="bg-green-500 px-4 py-2 font-bold font-mono">
+                <button class="bg-green-500 px-4 py-2 font-bold font-mono next-btn">
                     Next
                 </button>
             </div>
         </div>
     </div>
 
-    <div id="step-content" class="w-full flex-1 hidden">
+    <div class="w-full flex-1 hidden step-content">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -101,7 +101,7 @@
             </div>
 
             <div class="flex-1 w-3/4 flex justify-end items-start pr-4 gap-2">
-                <button id="previous-btn" class="bg-gray-700 px-4 py-2 font-bold font-mono">
+                <button class="bg-gray-700 px-4 py-2 font-bold font-mono previous-btn">
                     Previous
                 </button>
 
@@ -112,6 +112,6 @@
         </div>
     </div>
 
-
+    <script src="index.js"></script>
 </body>
 </html>
