fix the event listenr

--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -15,7 +15,7 @@
         <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center top-content">Username & Password</div>
     </div>
 
-    <div class="w-full flex-1 step-content">
+    <div class="w-full flex-1 step-content hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -38,7 +38,7 @@
 
     </div>
 
-    <div class="w-full flex-1 hidden step-content">
+    <div class="w-full flex-1 hidden step-content hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -63,7 +63,7 @@
         </div>
     </div>
 
-    <div class="w-full flex-1 hidden step-content">
+    <div class="w-full flex-1 hidden step-content hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
@@ -87,7 +87,7 @@
         </div>
     </div>
 
-    <div class="w-full flex-1 hidden step-content">
+    <div class="w-full flex-1 hidden step-content hidden">
         <div class="bg-gray-300 w-full h-full text-white flex flex-col pl-70">
             <div class="flex justify-start items-end w-full py-4 px-8 h-46 text-6xl text-black">
                 Register:
