--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-950 w-full h-screen flex flex-col">
-    <div class="w-full flex flex-row h-10">
+    <div class="w-full flex flex-row h-10 top-content">
         <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center top-content">Personal Details</div>
         <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center top-content">Contact Info</div>
         <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center top-content">Address</div>
@@ -105,10 +105,20 @@
                     Previous
                 </button>
 
-                <button class="bg-yellow-500 px-4 py-2 font-bold font-mono">
+                <button id="submit-btn" class="bg-yellow-500 px-4 py-2 font-bold font-mono">
                     Submit
                 </button>
             </div>
+        </div>
+    </div>
+
+    <div class="w-full flex-1 hidden step-content">
+        <div class="bg-gray-300 w-full h-full text-white flex flex-col justify-center items-center">
+            <div class="text-4xl text-green-600 font-bold mb-4">Success!</div>
+            <p class="text-black text-xl">Your account has been created.</p>
+            <button onclick="location.reload()" class="mt-8 bg-blue-500 px-6 py-2 rounded text-white">
+                Restart
+            </button>
         </div>
     </div>
 
