fix the UI when submit is clicked

--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body class="bg-gray-950 w-full h-screen flex flex-col">
-    <div class="w-full flex flex-row h-10 top-content">
+    <div id="top" class="w-full flex flex-row h-10 main-content">
         <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center top-content">Personal Details</div>
         <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center top-content">Contact Info</div>
         <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center top-content">Address</div>
