--- a/Multi-step Form/index.html
+++ b/Multi-step Form/index.html
@@ -7,11 +7,12 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-950 w-full h-screen flex flex-col">
-    <div id="top" class="w-full flex flex-row h-10 main-content">
-        <div class="flex-1 bg-gray-500 p-4 text-white flex justify-center items-center top-content">Personal Details</div>
-        <div class="flex-1 bg-blue-500 p-4 text-white flex justify-center items-center top-content">Contact Info</div>
-        <div class="flex-1 bg-green-500 p-4 text-white flex justify-center items-center top-content">Address</div>
-        <div class="flex-1 bg-yellow-500 p-4 text-white flex justify-center items-center top-content">Username & Password</div>
+    <div id="top" class="w-full flex flex-row h-3 main-content">
+        <div class="flex-1 bg-gray-300 p-4 text-white flex justify-center items-center top-content"></div>
+        <div class="flex-1 bg-gray-300 p-4 text-white flex justify-center items-center top-content"></div>
+        <div class="flex-1 bg-gray-300 p-4 text-white flex justify-center items-center top-content"></div>
+        <div class="flex-1 bg-gray-300 p-4 text-white flex justify-center items-center top-content"></div>
+        <div class="flex-1 bg-gray-300 p-4 text-white flex justify-center items-center top-content"></div>
     </div>
 
     <div class="w-full flex-1 step-content hidden">
