--- a/Scroll-To-Top Button/index.html
+++ b/Scroll-To-Top Button/index.html
@@ -6,7 +6,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body class="bg-gray-950 w-full h-screen flex flex-col">
+<body class="bg-green-100 w-full min-h-screen flex flex-col">
+    <div class="bg-gray-950 w-full h-screen">
 
+    </div>
+
+    <div class="bg-green-950 w-full h-screen">
+
+    </div>
+
+    <button class="bg-blue-950 w-32 px-4 py-2 rounded-md text-white fixed bottom-5 right-20 hidden">TOP</button>
 </body>
 </html>
