--- a/Scroll-To-Top Button/index.html
+++ b/Scroll-To-Top Button/index.html
@@ -15,6 +15,8 @@
 
     </div>
 
-    <button class="bg-blue-950 w-32 px-4 py-2 rounded-md text-white fixed bottom-5 right-20 hidden">TOP</button>
+    <button id="top-btn" class="bg-blue-950 w-32 px-4 py-2 rounded-md text-white fixed bottom-5 right-20 hidden">TOP</button>
+
+    <script src="index.js"></script>
 </body>
 </html>
