--- a/Infinite Scroll App/index.html
+++ b/Infinite Scroll App/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body class="bg-gray-200 w-full h-screen flex flex-col p-4">
@@ -12,7 +13,7 @@
 
         </div>
 
-        <div class="loader">
+        <div class="loader flex hidden">
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
