--- a/Infinite Scroll App/index.html
+++ b/Infinite Scroll App/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-200 w-full h-screen flex flex-col p-4">
-    <div class="bg-gray-950 rounded-md flex flex-col w-full h-full container">
-        <div id="post-container">
+    <div class="bg-gray-950 rounded-md flex flex-col w-full h-auto container">
+        <div id="post-container" class="flex flex-col w-full px-2">
 
         </div>
 
