--- a/Infinite Scroll App/index.html
+++ b/Infinite Scroll App/index.html
@@ -13,7 +13,7 @@
 
         </div>
 
-        <div class="loader flex hidden">
+        <div class="loader flex justify-center items-center">
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
