--- a/FAQ Accordion/index.html
+++ b/FAQ Accordion/index.html
@@ -6,7 +6,22 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body class="bg-gray-950 flex justify-center items-center">
+<body class="bg-gray-400 w-full min-h-screen flex justify-center items-center">
+    <main class="w-1/2 h-auto rounded-lg bg-gray-950 faq-item p-2 flex flex-col gap-4 justify-center items-center">
+        <div class="w-full flex flex-col bg-gray-200 rounded-lg shadow h-auto items-center justify-center py-2">
+            <h1 class="text-2xl">What is my name?</h1>
+            <h3 class="text-xl hidden">My name is chika chika Slim Shady</h3>
+        </div>
 
+        <div class="w-full flex flex-col bg-gray-200 rounded-lg shadow h-auto items-center justify-center py-2">
+            <h1 class="text-2xl">How old am I??</h1>
+            <h3 class="text-xl hidden">Im older than all molecules</h3>
+        </div>
+
+        <div class="w-full flex flex-col bg-gray-200 rounded-lg shadow h-auto items-center justify-center py-2">
+            <h1 class="text-2xl">Favorite food?</h1>
+            <h3 class="text-xl hidden">Yo mama</h3>
+        </div>
+    </main>
 </body>
 </html>
