--- a/Star Rating Component/index.html
+++ b/Star Rating Component/index.html
@@ -6,7 +6,17 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="bg-gray-950 w-screen h-screen flex flex-col justify-center items-center">
+    <main class="w-1/2 h-96 bg-white rounded-lg shadow-md shadow-gray-200 flex  flex-col justify-center items-center">
+        <div class="w-full h-20 flex flex-row justify-between px-4 items-center">
+            <img src="img/reset-svgrepo-com.svg" class="w-12 h-12 flex items-center justify-center mt-2" alt="">
+            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+        </div>
 
+    </main>
 </body>
 </html>
