--- a/Star Rating Component/index.html
+++ b/Star Rating Component/index.html
@@ -10,11 +10,56 @@
     <main class="w-1/2 h-96 bg-white rounded-lg shadow-md shadow-gray-200 flex  flex-col justify-center items-center">
         <div class="w-full h-20 flex flex-row justify-between px-4 items-center">
             <img src="img/reset-svgrepo-com.svg" class="w-12 h-12 flex items-center justify-center mt-2" alt="">
-            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
-            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
-            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
-            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
-            <img src="img/star-svgrepo-com.svg" class="w-16 h-16" alt="Star">
+
+            <svg
+                    data-value="1"
+                    class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+            >
+                <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+            </svg>
+
+            <svg
+                    data-value="1"
+                    class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+            >
+                <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+            </svg>
+
+            <svg
+                    data-value="1"
+                    class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+            >
+                <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+            </svg>
+
+            <svg
+                    data-value="1"
+                    class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+            >
+                <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+            </svg>
+
+            <svg
+                    data-value="1"
+                    class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    fill="currentColor"
+            >
+                <path fill-rule="evenodd" d="M10.788 3.21c.448-1.077 1.976-1.077 2.424 0l2.082 5.007 5.404.433c1.164.093 1.636 1.545.749 2.305l-4.117 3.527 1.257 5.273c.271 1.136-.964 2.033-1.96 1.425L12 18.354 7.373 21.18c-.996.608-2.231-.29-1.96-1.425l1.257-5.273-4.117-3.527c-.887-.76-.415-2.212.749-2.305l5.404-.433 2.082-5.006z" clip-rule="evenodd" />
+            </svg>
         </div>
 
     </main>
