get all data attribute and tried it on console

--- a/Star Rating Component/index.html
+++ b/Star Rating Component/index.html
@@ -22,7 +22,7 @@
             </svg>
 
             <svg
-                    data-value="1"
+                    data-value="2"
                     class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -32,7 +32,7 @@
             </svg>
 
             <svg
-                    data-value="1"
+                    data-value="3"
                     class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -42,7 +42,7 @@
             </svg>
 
             <svg
-                    data-value="1"
+                    data-value="4"
                     class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -52,7 +52,7 @@
             </svg>
 
             <svg
-                    data-value="1"
+                    data-value="5"
                     class="star w-16 h-16 text-gray-300 cursor-pointer hover:scale-110 transition-transform"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
@@ -63,5 +63,7 @@
         </div>
 
     </main>
+
+    <script src="index.js"></script>
 </body>
 </html>
