added a reset event listener

--- a/Star Rating Component/index.html
+++ b/Star Rating Component/index.html
@@ -10,7 +10,7 @@
 <body class="bg-gray-950 w-screen h-screen flex flex-col justify-center items-center">
     <main class="w-1/2 h-96 bg-white rounded-lg shadow-md shadow-gray-200 flex  flex-col justify-center items-center">
         <div class="w-full h-20 flex flex-row justify-between px-4 items-center">
-            <img src="img/reset-svgrepo-com.svg" class="w-12 h-12 flex items-center justify-center mt-2" alt="">
+            <img id="reset" src="img/reset-svgrepo-com.svg" class="w-12 h-12 flex items-center justify-center mt-2" alt="">
 
             <svg
                     data-value="1"
