--- a/Quiz App Timer/index.html
+++ b/Quiz App Timer/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="quiz.css">
     <title>Document</title>
 </head>
 <body class="bg-gray-950 w-screen h-screen flex flex-col justify-center items-center">
