added the question number and added the timer

--- a/Quiz App Timer/index.html
+++ b/Quiz App Timer/index.html
@@ -16,7 +16,7 @@
         </div>
 
         <div id="quiz-screen" class="p-8 hidden">
-            <h1 class="flex justify-between"><span>Question 1/5</span><span id="time-left"></span></h1>
+            <h1 class="flex justify-between"><span id="question-number"></span><span id="time-left"></span></h1>
             <h2 id="question-text" class="font-bold mb-6"></h2>
 
             <div id="option-container" class="flex flex-col gap-4">
