--- a/Quiz App Timer/index.html
+++ b/Quiz App Timer/index.html
@@ -25,8 +25,8 @@
 
         </div>
 
-        <div id="result-screen" class="hidden text-center p-8">
-            <h2>Quiz Completed</h2>
+        <div id="result-screen" class="hidden text-center p-8 flex flex-col gap-4">
+            <h2 class="text-2xl font-bold">Quiz Completed</h2>
             <p id="final-score"></p>
             <button id="restart-btn" class="bg-blue-600 text-white py-2 px-2 rounded hover:bg-blue-700">RESTART</button>
         </div>
