--- a/ATLAS speech AI/index.html
+++ b/ATLAS speech AI/index.html
@@ -12,12 +12,12 @@
 
     <main class=" w-full flex-1 flex flex-col">
         <div id="atlas-core" class="w-full flex-1 flex justify-center items-center flex-col">
-            <img src="img/active.png" class="w-96 h-96 object-fit">
-            <p class="text-white">ATLAS Online...</p>
+            <img id="atlas-img" src="img/active.png" class="w-96 h-96 object-fit">
+            <p id="status" class="text-white">ATLAS Online...</p>
         </div>
 
-        <div class="w-full h-16">
-            <img id="mic" src="img/ss.png" class="w-16 h-16 object-fit">
+        <div class="w-full h-16 flex justify-center items-center">
+            <button id="speak" class="mb-4"><img id="mic" src="img/ss.png" class="w-16 h-16 object-fit"></button>
         </div>
     </main>
 
