--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -11,8 +11,22 @@
 
     </div>
 
-    <div class="w-full h-24 fixed bottom-0 bg-gray-500">
-
+    <div class="w-full h-24 fixed bottom-0 bg-gray-500 flex justify-center items-center flex-row gap-2">
+        <img src="img/1.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/2.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/3.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/4.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/5.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/6.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/7.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/8.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/9.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/10.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/11.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/12.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/13.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/14.jpg" class="w-20 h-20 rounded-md">
+        <img src="img/15.jpg" class="w-20 h-20 rounded-md">
     </div>
 </body>
 </html>
