added the initial layout structure

--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -8,15 +8,15 @@
 </head>
 <body class="bg-gray-950 w-screen h-screen flex flex-col">
     <div class="flex-1 bg-white">
-
+        <img src="img/1.jpg" class="h-screen w-full object-fill p-6" id="main-image">
     </div>
 
     <div class="w-full h-24 fixed bottom-0 bg-gray-500 flex justify-center items-center flex-row gap-2 overflow-hidden">
-        <div>
+        <div id="left-btn" class="cursor-pointer">
             <img src="img/left.png" class="w-20 h-20 rounded-md">
         </div>
         
-        <div class="w-full flex flex-row overflow-hidden gap-4">
+        <div id="scroll-contain" class="w-full flex flex-row overflow-hidden gap-4">
             <img src="img/1.jpg" class="w-20 h-20 rounded-md">
             <img src="img/2.jpg" class="w-20 h-20 rounded-md">
             <img src="img/3.jpg" class="w-20 h-20 rounded-md">
@@ -33,9 +33,9 @@
             <img src="img/14.jpg" class="w-20 h-20 rounded-md">
             <img src="img/15.jpg" class="w-20 h-20 rounded-md">
         </div>
+
+        <div id="right-btn" class="cursor-pointer">
             <img src="img/right.png" class="w-20 h-20 rounded-md">
-        <div>
-            
         </div>
     </div>
 </body>
