add event listener to scroll left

--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-950 w-screen h-screen flex flex-col">
     <div class="flex-1 bg-white">
-        <img src="img/1.jpg" class="h-screen w-full object-fill" id="main-image">
+        <img src="img/1.jpg" class="h-screen w-full object-cover" id="main-image">
     </div>
 
     <div class="w-full h-24 fixed bottom-0 bg-gray-500 flex justify-center items-center flex-row gap-2 overflow-hidden">
