final UI design

--- a/Image Gallery/index.html
+++ b/Image Gallery/index.html
@@ -13,29 +13,44 @@
 
     <div class="w-full h-24 fixed bottom-0 bg-gray-500 flex justify-center items-center flex-row gap-2 overflow-hidden">
         <div id="left-btn" class="cursor-pointer">
-            <img src="img/left.png" class="w-20 h-20 rounded-md">
+            <img src="img/left.png" class="w-10 h-10 rounded-md">
         </div>
         
-        <div id="scroll-contain" class="w-full flex flex-row overflow-hidden gap-4">
-            <img src="img/1.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/2.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/3.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/4.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/5.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/6.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/7.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/8.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/9.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/10.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/11.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/12.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/13.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/14.jpg" class="w-20 h-20 rounded-md thumb">
-            <img src="img/15.jpg" class="w-20 h-20 rounded-md thumb">
+        <div id="scroll-contain" class="w-full h-24 flex flex-row items-center overflow-hidden gap-4">
+            <img src="img/1.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/2.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/3.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/4.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/5.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/6.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/7.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/8.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/9.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/bor.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/11.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/12.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/13.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/14.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/15.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/1.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/2.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/3.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/4.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/5.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/6.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/7.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/8.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/9.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/10.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/11.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/12.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/13.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/14.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
+            <img src="img/15.jpg" class="w-16 h-16 rounded-md thumb cursor-pointer hover:scale-125 hover:shadow-lg hover:shadow-white/60 transition-transform transition-shadow duration-300 ease-out">
         </div>
 
         <div id="right-btn" class="cursor-pointer">
-            <img src="img/right.png" class="w-20 h-20 rounded-md">
+            <img src="img/right.png" class="w-10 h-10 rounded-md">
         </div>
     </div>
 
