--- a/Copy To Clipboard Tool/index.html
+++ b/Copy To Clipboard Tool/index.html
@@ -6,8 +6,24 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body class="bg-gray-950 w-screen h-screen flex flex-col">
+<body class="bg-gray-950 w-screen h-screen flex items-center justify-center py-8">
+    <main class="bg-pink-200 h-full w-1/2 rounded-md">
+        <div class=" w-full h-32 flex items-center justify-center">
+            <p class="text-7xl font-sans font-bold italic">Copy To Clipboard</p>
+        </div>
 
+        <div class=" w-full h-32 flex items-center justify-center">
+            <input type="text" placeholder="Type here.." class="w-96 h-16 border-2 border-black text-black rounded-md">
+        </div>
+
+        <div class=" w-full h-12 flex items-center justify-center">
+            <button class="bg-yellow-950 w-32 h-12 border-2 border-black text-black rounded-md text-white text-xl">Copy</button>
+        </div>
+
+        <div class="flex-1 flex items-center justify-center mt-10">
+            <p>Copied text: <span></span></p>
+        </div>
+    </main>
 
 <script src="index.js"></script>
 </body>
