--- a/Copy To Clipboard Tool/index.html
+++ b/Copy To Clipboard Tool/index.html
@@ -13,15 +13,15 @@
         </div>
 
         <div class=" w-full h-32 flex items-center justify-center">
-            <input type="text" placeholder="Type here.." class="w-96 h-16 border-2 border-black text-black rounded-md">
+            <input id="copy-input" type="text" placeholder="Type here.." class="w-96 h-16 border-2 border-black text-black rounded-md">
         </div>
 
         <div class=" w-full h-12 flex items-center justify-center">
-            <button class="bg-yellow-950 w-32 h-12 border-2 border-black text-black rounded-md text-white text-xl">Copy</button>
+            <button id="copy-button" class="bg-yellow-950 w-32 h-12 border-2 border-black text-black rounded-md text-white text-xl">Copy</button>
         </div>
 
         <div class="flex-1 flex items-center justify-center mt-10">
-            <p>Copied text: <span></span></p>
+            <p>Copied text: <span id="result-span"></span></p>
         </div>
     </main>
 
