make some minor changes on UI

--- a/Copy To Clipboard Tool/index.html
+++ b/Copy To Clipboard Tool/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body class="bg-gray-950 w-screen h-screen flex items-center justify-center py-8">
-    <main class="bg-pink-200 h-full w-1/2 rounded-md">
+    <main class="bg-pink-200 h-auto w-1/2 rounded-md py-6">
         <div class=" w-full h-32 flex items-center justify-center">
             <p class="text-7xl font-sans font-bold italic">Copy To Clipboard</p>
         </div>
