rewrite the code inside event listner

--- a/Image Upload and Preview/index.html
+++ b/Image Upload and Preview/index.html
@@ -12,6 +12,6 @@
         Choose a file
     </label>
 
-    <img src="#" id="image-preview" class="w-64 h-auto hidden">
+    <img src="#" id="image-preview" class="w-96 h-96 hidden">
 </body>
 </html>
