connect the js in html

--- a/Image Upload and Preview/index.html
+++ b/Image Upload and Preview/index.html
@@ -13,5 +13,7 @@
     </label>
 
     <img src="#" id="image-preview" class="w-96 h-96 hidden">
+
+<script src="preview.js"></script>
 </body>
 </html>
