--- a/Image Upload and Preview/index.html
+++ b/Image Upload and Preview/index.html
@@ -6,13 +6,13 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Document</title>
 </head>
-<body>
+<body class="bg-gray-100 flex flex-col justify-center items-center h-screen">
     <input type="file" name="file-upload" id="file-upload" style="display:none;"/>
     <label for="file-upload" id="file-label" style="cursor: pointer; padding: 10px 15px; border: 1px solid #ccc; background-color: #f7f7f7;">
         Choose a file
     </label>
 
-    <img src="#" id="image-preview" class="w-96 h-96 hidden">
+    <img src="#" id="image-preview" class="w-96 h-96 hidden mt-4">
 
 <script src="preview.js"></script>
 </body>
