update the map link using the coordinates from API

--- a/Geolocation Weather App/index.html
+++ b/Geolocation Weather App/index.html
@@ -21,7 +21,9 @@
             Long: <span id="longitude">0.00</span>
         </div>
 
-        <a id="map-link" class="hidden text-white">VIEW ON MAP</a>
+        <div class="w-full text-center">
+            <a id="map-link" class="hidden text-white underline text-center">VIEW ON MAP</a>
+        </div>
     </div>
 
 <script src="index.js"></script>
