display the temperature on the UI

--- a/Geolocation Weather App/index.html
+++ b/Geolocation Weather App/index.html
@@ -21,6 +21,10 @@
             Long: <span id="longitude">0.00</span>
         </div>
 
+        <div class="data-box text-white text-center text-2xl">
+            Temp: <span id="weather">--</span>°C
+        </div>
+
         <div class="w-full text-center">
             <a id="map-link" class="hidden text-white underline text-center">VIEW ON MAP</a>
         </div>
