created a searchcCity function to search for city and act as middleman using API

--- a/Weather Forecast with Charts/index.html
+++ b/Weather Forecast with Charts/index.html
@@ -11,7 +11,7 @@
 
     <div class="w-full h-16 flex justify-center items-center">
         <input id="input" type="text" class="bg-white w-96 rounded-l-md">
-        <button id="search-button" class="bg-gray-500 text-black px-4 rounded-r-md text-white">SEARCH</button>
+        <button id="search-button" class="bg-gray-500 text-black px-4 rounded-r-md text-white">SEARCH CITY</button>
     </div>
 
     <div class="w-full max-w-4xl min-h-[300px] bg-white flex flex-col rounded-lg">
